<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/overviewButton"
        android:title="@string/overview"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/classButton"
        android:title="@string/characterClass"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/abilityScoresButton"
        android:title="@string/abilityScores"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/raceButton"
        android:title="@string/race"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/backgroundButton"
        android:title="@string/background"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/itemsButton"
        android:title="@string/items"
        app:showAsAction="never">
    </item>


    <item
        android:id="@+id/spellsButton"
        android:title="@string/spells"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/viewButton"
        android:title="@string/characterView"
        app:showAsAction="never">
    </item>

</menu>